@@ -2,6 +2,9 @@
   - Update documentation for usage under mod_perl (thx rrose)
   - Use default memcached port by uh, default.
   - Remove Time::Piece as dependency
+  - MySQL reference options: onDelete and onUpdate renamed to
+    deleteRefOpt and updateRefOpt
+  - More doc fixes
 
 .403
   - Modify die() handler to not hork on non-Error objects
